helm/signoz/service-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: signoz-frontend-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - protocol: TCP
      port: 3301
      targetPort: 3301
      nodePort: 32084
